# data-pipline

./: README.md
.devcontainer/: devcontainer.json
pipeline_project/: pyproject.toml
pipeline_project/src/v_pipline/cli/: main.py
pipeline_project/src/v_pipline/cli/config/: authentication.py  config.py  init.py  provider_choices.py
pipeline_project/src/v_pipline/cli/config/clients/: azure.py
pipeline_project/src/v_pipline/cli/database/: database.py
pipeline_project/src/v_pipline/cli/decorators/: __init__.py
pipeline_project/src/v_pipline/cli/exceptions/: error_codes.py
pipeline_project/src/v_pipline/cli/utils/: run_async.py
pipeline_project/src/v_pipline/cli/vectorize/: file.py
